--- a/CubeMx project.ioc
+++ b/CubeMx project.ioc
@@ -1,31 +1,38 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-1\#ChannelInjectedConversion=ADC_CHANNEL_0
-ADC1.Channel-2\#ChannelInjectedConversion=ADC_CHANNEL_0
-ADC1.Channel-3\#ChannelInjectedConversion=ADC_CHANNEL_0
+ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_2
+ADC1.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC1.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_4
+ADC1.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_5
 ADC1.ContinuousConvMode=DISABLE
 ADC1.DMAContinuousRequests=ENABLE
-ADC1.IPParameters=NbrOfConversionFlag,master,ScanConvMode,Resolution,ContinuousConvMode,NbrOfConversion,InjectedRank-1\#ChannelInjectedConversion,Channel-1\#ChannelInjectedConversion,SamplingTime-1\#ChannelInjectedConversion,InjectedOffset-1\#ChannelInjectedConversion,InjectedRank-2\#ChannelInjectedConversion,Channel-2\#ChannelInjectedConversion,SamplingTime-2\#ChannelInjectedConversion,InjectedOffset-2\#ChannelInjectedConversion,InjectedRank-3\#ChannelInjectedConversion,Channel-3\#ChannelInjectedConversion,SamplingTime-3\#ChannelInjectedConversion,InjectedOffset-3\#ChannelInjectedConversion,InjNumberOfConversion,DMAContinuousRequests
-ADC1.InjNumberOfConversion=3
+ADC1.IPParameters=NbrOfConversionFlag,master,ScanConvMode,Resolution,ContinuousConvMode,NbrOfConversion,InjectedRank-1\#ChannelInjectedConversion,Channel-1\#ChannelInjectedConversion,SamplingTime-1\#ChannelInjectedConversion,InjectedOffset-1\#ChannelInjectedConversion,InjNumberOfConversion,DMAContinuousRequests,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion
+ADC1.InjNumberOfConversion=1
 ADC1.InjectedOffset-1\#ChannelInjectedConversion=0
-ADC1.InjectedOffset-2\#ChannelInjectedConversion=0
-ADC1.InjectedOffset-3\#ChannelInjectedConversion=0
 ADC1.InjectedRank-1\#ChannelInjectedConversion=1
-ADC1.InjectedRank-2\#ChannelInjectedConversion=2
-ADC1.InjectedRank-3\#ChannelInjectedConversion=3
-ADC1.NbrOfConversion=1
+ADC1.NbrOfConversion=6
 ADC1.NbrOfConversionFlag=1
+ADC1.Rank-4\#ChannelRegularConversion=2
+ADC1.Rank-5\#ChannelRegularConversion=3
+ADC1.Rank-6\#ChannelRegularConversion=4
+ADC1.Rank-7\#ChannelRegularConversion=5
+ADC1.Rank-8\#ChannelRegularConversion=6
 ADC1.Resolution=ADC_RESOLUTION_10B
 ADC1.SamplingTime-1\#ChannelInjectedConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-2\#ChannelInjectedConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-3\#ChannelInjectedConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.SamplingTime-8\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.ScanConvMode=ENABLE
 ADC1.master=1
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.ADC1.0.Instance=DMA2_Stream0
 Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC1.0.MemInc=DMA_MINC_DISABLE
-Dma.ADC1.0.Mode=DMA_NORMAL
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.0.Mode=DMA_CIRCULAR
 Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
@@ -71,7 +78,7 @@ Mcu.Pin8=PA0-WKUP
 Mcu.Pin9=PA1
 Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
-Mcu.UserConstants=adc_values,0
+Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
 MxCube.Version=6.0.1
 MxDb.Version=DB.6.0.0
