--- a/CubeMx project.ioc
+++ b/CubeMx project.ioc
@@ -96,6 +96,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=ntc_1
@@ -179,7 +180,7 @@ PC7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC7.Locked=true
 PC7.Signal=I2S3_MCK
 PD12.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-PD12.GPIO_Label=LED_R
+PD12.GPIO_Label=LED_G
 PD12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PD12.GPIO_PuPd=GPIO_NOPULL
 PD12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
@@ -187,7 +188,7 @@ PD12.Locked=true
 PD12.PinState=GPIO_PIN_RESET
 PD12.Signal=GPIO_Output
 PD14.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-PD14.GPIO_Label=LED_G
+PD14.GPIO_Label=LED_R
 PD14.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PD14.GPIO_PuPd=GPIO_NOPULL
 PD14.GPIO_Speed=GPIO_SPEED_FREQ_LOW
@@ -229,7 +230,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_TIM10_Init-TIM10-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.48MHZClocksFreq_Value=25000000
 RCC.AHBFreq_Value=100000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -280,7 +281,7 @@ SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.IPParameters=Prescaler,Period,AutoReloadPreload
-TIM2.Period=10000
+TIM2.Period=9999
 TIM2.Prescaler=9999
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
