--- a/CubeMx project.ioc
+++ b/CubeMx project.ioc
@@ -66,10 +66,11 @@ Mcu.Pin17=PA13
 Mcu.Pin18=PA14
 Mcu.Pin19=PB3
 Mcu.Pin2=PH0 - OSC_IN
-Mcu.Pin20=PB6
-Mcu.Pin21=PB7
-Mcu.Pin22=VP_SYS_VS_Systick
-Mcu.Pin23=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin20=PB5
+Mcu.Pin21=PB6
+Mcu.Pin22=PB7
+Mcu.Pin23=VP_SYS_VS_Systick
+Mcu.Pin24=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PH1 - OSC_OUT
 Mcu.Pin4=PC0
 Mcu.Pin5=PC1
@@ -77,7 +78,7 @@ Mcu.Pin6=PC2
 Mcu.Pin7=PC3
 Mcu.Pin8=PA0-WKUP
 Mcu.Pin9=PA1
-Mcu.PinsNb=24
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -92,7 +93,7 @@ NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
+NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -131,6 +132,10 @@ PA5.Signal=ADCx_IN5
 PB3.Locked=true
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=rs_dir
+PB5.Locked=true
+PB5.Signal=GPIO_Output
 PB6.Locked=true
 PB6.Mode=Asynchronous
 PB6.Signal=USART1_TX
