--- a/CubeMx project.ioc
+++ b/CubeMx project.ioc
@@ -1,76 +1,45 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-1\#ChannelInjectedConversion=ADC_CHANNEL_0
-ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC1.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_3
-ADC1.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_4
-ADC1.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_5
-ADC1.ContinuousConvMode=DISABLE
-ADC1.DMAContinuousRequests=ENABLE
-ADC1.IPParameters=NbrOfConversionFlag,master,ScanConvMode,Resolution,ContinuousConvMode,NbrOfConversion,InjectedRank-1\#ChannelInjectedConversion,Channel-1\#ChannelInjectedConversion,SamplingTime-1\#ChannelInjectedConversion,InjectedOffset-1\#ChannelInjectedConversion,InjNumberOfConversion,DMAContinuousRequests,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion
-ADC1.InjNumberOfConversion=1
-ADC1.InjectedOffset-1\#ChannelInjectedConversion=0
-ADC1.InjectedRank-1\#ChannelInjectedConversion=1
-ADC1.NbrOfConversion=6
+ADC1.Channel-10\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-11\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.Channel-12\#ChannelRegularConversion=ADC_CHANNEL_2
+ADC1.IPParameters=Rank-10\#ChannelRegularConversion,master,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion,NbrOfConversionFlag,Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,Rank-12\#ChannelRegularConversion,Channel-12\#ChannelRegularConversion,SamplingTime-12\#ChannelRegularConversion,NbrOfConversion
+ADC1.NbrOfConversion=3
 ADC1.NbrOfConversionFlag=1
-ADC1.Rank-4\#ChannelRegularConversion=2
-ADC1.Rank-5\#ChannelRegularConversion=3
-ADC1.Rank-6\#ChannelRegularConversion=4
-ADC1.Rank-7\#ChannelRegularConversion=5
-ADC1.Rank-8\#ChannelRegularConversion=6
-ADC1.Resolution=ADC_RESOLUTION_10B
-ADC1.SamplingTime-1\#ChannelInjectedConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-8\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.ScanConvMode=ENABLE
+ADC1.Rank-10\#ChannelRegularConversion=1
+ADC1.Rank-11\#ChannelRegularConversion=2
+ADC1.Rank-12\#ChannelRegularConversion=3
+ADC1.SamplingTime-10\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.SamplingTime-11\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.SamplingTime-12\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
-Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.ADC1.0.Instance=DMA2_Stream0
-Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
-Dma.ADC1.0.Mode=DMA_CIRCULAR
-Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
-Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.Request0=ADC1
-Dma.RequestsNb=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
-Mcu.IP1=DMA
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TIM2
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=TIM2
+Mcu.IP5=USART1
+Mcu.IPNb=6
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
 Mcu.Pin10=PA2
-Mcu.Pin11=PA3
-Mcu.Pin12=PA4
-Mcu.Pin13=PA5
-Mcu.Pin14=PD12
-Mcu.Pin15=PD14
-Mcu.Pin16=PC7
-Mcu.Pin17=PA13
-Mcu.Pin18=PA14
-Mcu.Pin19=PB3
+Mcu.Pin11=PD12
+Mcu.Pin12=PD14
+Mcu.Pin13=PC7
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PB3
+Mcu.Pin17=PB5
+Mcu.Pin18=PB6
+Mcu.Pin19=PB7
 Mcu.Pin2=PH0 - OSC_IN
-Mcu.Pin20=PB5
-Mcu.Pin21=PB6
-Mcu.Pin22=PB7
-Mcu.Pin23=VP_SYS_VS_Systick
-Mcu.Pin24=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin20=VP_SYS_VS_Systick
+Mcu.Pin21=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PH1 - OSC_OUT
 Mcu.Pin4=PC0
 Mcu.Pin5=PC1
@@ -78,14 +47,13 @@ Mcu.Pin6=PC2
 Mcu.Pin7=PC3
 Mcu.Pin8=PA0-WKUP
 Mcu.Pin9=PA1
-Mcu.PinsNb=25
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
 MxCube.Version=6.0.1
 MxDb.Version=DB.6.0.0
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.DMA2_Stream0_IRQn=true\:3\:0\:true\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.EXTI0_IRQn=true\:1\:0\:true\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
@@ -99,12 +67,16 @@ NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true
 NVIC.TIM2_IRQn=true\:0\:0\:true\:false\:true\:true\:true
 NVIC.USART1_IRQn=true\:2\:0\:true\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-PA0-WKUP.GPIOParameters=GPIO_Label
+PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA0-WKUP.GPIO_Label=ntc_1
+PA0-WKUP.GPIO_Mode=GPIO_MODE_ANALOG
+PA0-WKUP.GPIO_PuPd=GPIO_NOPULL
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=ADCx_IN0
-PA1.GPIOParameters=GPIO_Label
+PA1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA1.GPIO_Label=ntc_2
+PA1.GPIO_Mode=GPIO_MODE_ANALOG
+PA1.GPIO_PuPd=GPIO_NOPULL
 PA1.Locked=true
 PA1.Signal=ADCx_IN1
 PA13.Locked=true
@@ -113,28 +85,22 @@ PA13.Signal=SYS_JTMS-SWDIO
 PA14.Locked=true
 PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
-PA2.GPIOParameters=GPIO_Label
-PA2.GPIO_Label=ntc_3
+PA2.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
+PA2.GPIO_Label=ntc_5
+PA2.GPIO_Mode=GPIO_MODE_ANALOG
+PA2.GPIO_PuPd=GPIO_NOPULL
 PA2.Locked=true
 PA2.Signal=ADCx_IN2
-PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=ntc_4
-PA3.Locked=true
-PA3.Signal=ADCx_IN3
-PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=ntc_5
-PA4.Locked=true
-PA4.Signal=ADCx_IN4
-PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=ntc_6
-PA5.Locked=true
-PA5.Signal=ADCx_IN5
 PB3.Locked=true
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
-PB5.GPIOParameters=GPIO_Label
+PB5.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB5.GPIO_Label=rs_dir
+PB5.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB5.GPIO_PuPd=GPIO_NOPULL
+PB5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB5.Locked=true
+PB5.PinState=GPIO_PIN_RESET
 PB5.Signal=GPIO_Output
 PB6.Locked=true
 PB6.Mode=Asynchronous
@@ -143,8 +109,8 @@ PB7.Locked=true
 PB7.Mode=Asynchronous
 PB7.Signal=USART1_RX
 PC0.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PC0.GPIO_Label=zero_crossing_detection
-PC0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
+PC0.GPIO_Label=zero_crossing
+PC0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC0.GPIO_PuPd=GPIO_NOPULL
 PC0.Locked=true
 PC0.Signal=GPXTI0
@@ -178,14 +144,16 @@ PC3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC3.Locked=true
 PC3.PinState=GPIO_PIN_RESET
 PC3.Signal=GPIO_Output
-PC7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
-PC7.GPIO_Mode=GPIO_MODE_AF_PP
+PC7.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PC7.GPIO_Label=debug_pin
+PC7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PC7.GPIO_PuPd=GPIO_NOPULL
 PC7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC7.Locked=true
-PC7.Signal=I2S3_MCK
+PC7.PinState=GPIO_PIN_RESET
+PC7.Signal=GPIO_Output
 PD12.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-PD12.GPIO_Label=LED_G
+PD12.GPIO_Label=LED_R
 PD12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PD12.GPIO_PuPd=GPIO_NOPULL
 PD12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
@@ -193,7 +161,7 @@ PD12.Locked=true
 PD12.PinState=GPIO_PIN_RESET
 PD12.Signal=GPIO_Output
 PD14.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-PD14.GPIO_Label=LED_R
+PD14.GPIO_Label=LED_G
 PD14.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PD14.GPIO_PuPd=GPIO_NOPULL
 PD14.GPIO_Speed=GPIO_SPEED_FREQ_LOW
@@ -276,19 +244,14 @@ SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
 SH.ADCx_IN2.0=ADC1_IN2,IN2
 SH.ADCx_IN2.ConfNb=1
-SH.ADCx_IN3.0=ADC1_IN3,IN3
-SH.ADCx_IN3.ConfNb=1
-SH.ADCx_IN4.0=ADC1_IN4,IN4
-SH.ADCx_IN4.ConfNb=1
-SH.ADCx_IN5.0=ADC1_IN5,IN5
-SH.ADCx_IN5.ConfNb=1
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.IPParameters=Prescaler,Period,AutoReloadPreload
-TIM2.Period=9999
-TIM2.Prescaler=9999
-USART1.IPParameters=VirtualMode
+TIM2.Period=99
+TIM2.Prescaler=99
+USART1.BaudRate=9600
+USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
