Fixed ADC configuration

--- a/CubeMx project.ioc
+++ b/CubeMx project.ioc
@@ -2,27 +2,43 @@
 ADC1.Channel-10\#ChannelRegularConversion=ADC_CHANNEL_0
 ADC1.Channel-11\#ChannelRegularConversion=ADC_CHANNEL_1
 ADC1.Channel-12\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC1.IPParameters=Rank-10\#ChannelRegularConversion,master,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion,NbrOfConversionFlag,Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,Rank-12\#ChannelRegularConversion,Channel-12\#ChannelRegularConversion,SamplingTime-12\#ChannelRegularConversion,NbrOfConversion
+ADC1.DMAContinuousRequests=ENABLE
+ADC1.EOCSelection=ADC_EOC_SEQ_CONV
+ADC1.IPParameters=Rank-10\#ChannelRegularConversion,master,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion,NbrOfConversionFlag,Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,Rank-12\#ChannelRegularConversion,Channel-12\#ChannelRegularConversion,SamplingTime-12\#ChannelRegularConversion,NbrOfConversion,Resolution,DMAContinuousRequests,EOCSelection
 ADC1.NbrOfConversion=3
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-10\#ChannelRegularConversion=1
 ADC1.Rank-11\#ChannelRegularConversion=2
 ADC1.Rank-12\#ChannelRegularConversion=3
+ADC1.Resolution=ADC_RESOLUTION_10B
 ADC1.SamplingTime-10\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.SamplingTime-11\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.SamplingTime-12\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
+Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC1.0.Instance=DMA2_Stream0
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.0.Mode=DMA_NORMAL
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.Request0=ADC1
+Dma.RequestsNb=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM2
-Mcu.IP5=USART1
-Mcu.IPNb=6
+Mcu.IP1=DMA
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM2
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN
@@ -53,7 +69,9 @@ Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
 MxCube.Version=6.0.1
 MxDb.Version=DB.6.0.0
+NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.EXTI0_IRQn=true\:1\:0\:true\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
