--- a/CubeMx project.ioc
+++ b/CubeMx project.ioc
@@ -53,14 +53,17 @@ Mcu.Pin14=PA11
 Mcu.Pin15=PA12
 Mcu.Pin16=PA13
 Mcu.Pin17=PA14
-Mcu.Pin18=PB3
-Mcu.Pin19=PB5
+Mcu.Pin18=PD0
+Mcu.Pin19=PD1
 Mcu.Pin2=PH0 - OSC_IN
-Mcu.Pin20=PB6
-Mcu.Pin21=PB7
-Mcu.Pin22=VP_SYS_VS_Systick
-Mcu.Pin23=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin24=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin20=PD2
+Mcu.Pin21=PB3
+Mcu.Pin22=PB5
+Mcu.Pin23=PB6
+Mcu.Pin24=PB7
+Mcu.Pin25=VP_SYS_VS_Systick
+Mcu.Pin26=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin27=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin3=PH1 - OSC_OUT
 Mcu.Pin4=PC0
 Mcu.Pin5=PC1
@@ -68,7 +71,7 @@ Mcu.Pin6=PC2
 Mcu.Pin7=PC3
 Mcu.Pin8=PA0-WKUP
 Mcu.Pin9=PA1
-Mcu.PinsNb=25
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -182,6 +185,16 @@ PC7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC7.Locked=true
 PC7.PinState=GPIO_PIN_RESET
 PC7.Signal=GPIO_Output
+PD0.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD0.GPIO_Label=TS4_sensor_connected
+PD0.GPIO_PuPd=GPIO_PULLUP
+PD0.Locked=true
+PD0.Signal=GPIO_Input
+PD1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD1.GPIO_Label=TS5_sensor_connected
+PD1.GPIO_PuPd=GPIO_PULLUP
+PD1.Locked=true
+PD1.Signal=GPIO_Input
 PD12.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PD12.GPIO_Label=LED_G
 PD12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
@@ -199,6 +212,11 @@ PD14.Locked=true
 PD14.PinState=GPIO_PIN_RESET
 PD14.Signal=GPIO_Output
 PD14.Stacked=true
+PD2.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD2.GPIO_Label=TS6_sensor_connected
+PD2.GPIO_PuPd=GPIO_PULLUP
+PD2.Locked=true
+PD2.Signal=GPIO_Input
 PH0\ -\ OSC_IN.Locked=true
 PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
