ADC and sensor buttons working

--- a/CubeMx project.ioc
+++ b/CubeMx project.ioc
@@ -4,13 +4,14 @@ ADC1.Channel-11\#ChannelRegularConversion=ADC_CHANNEL_1
 ADC1.Channel-12\#ChannelRegularConversion=ADC_CHANNEL_2
 ADC1.DMAContinuousRequests=ENABLE
 ADC1.EOCSelection=ADC_EOC_SEQ_CONV
-ADC1.IPParameters=Rank-10\#ChannelRegularConversion,master,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion,NbrOfConversionFlag,Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,Rank-12\#ChannelRegularConversion,Channel-12\#ChannelRegularConversion,SamplingTime-12\#ChannelRegularConversion,NbrOfConversion,Resolution,DMAContinuousRequests,EOCSelection
+ADC1.ExternalTrigConv=ADC_SOFTWARE_START
+ADC1.IPParameters=Rank-10\#ChannelRegularConversion,master,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion,NbrOfConversionFlag,Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,Rank-12\#ChannelRegularConversion,Channel-12\#ChannelRegularConversion,SamplingTime-12\#ChannelRegularConversion,NbrOfConversion,Resolution,DMAContinuousRequests,EOCSelection,ExternalTrigConv
 ADC1.NbrOfConversion=3
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-10\#ChannelRegularConversion=1
 ADC1.Rank-11\#ChannelRegularConversion=2
 ADC1.Rank-12\#ChannelRegularConversion=3
-ADC1.Resolution=ADC_RESOLUTION_10B
+ADC1.Resolution=ADC_RESOLUTION_12B
 ADC1.SamplingTime-10\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.SamplingTime-11\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.SamplingTime-12\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
@@ -187,12 +188,12 @@ PC7.PinState=GPIO_PIN_RESET
 PC7.Signal=GPIO_Output
 PD0.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD0.GPIO_Label=TS4_sensor_connected
-PD0.GPIO_PuPd=GPIO_PULLUP
+PD0.GPIO_PuPd=GPIO_PULLDOWN
 PD0.Locked=true
 PD0.Signal=GPIO_Input
 PD1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD1.GPIO_Label=TS5_sensor_connected
-PD1.GPIO_PuPd=GPIO_PULLUP
+PD1.GPIO_PuPd=GPIO_PULLDOWN
 PD1.Locked=true
 PD1.Signal=GPIO_Input
 PD12.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
@@ -214,7 +215,7 @@ PD14.Signal=GPIO_Output
 PD14.Stacked=true
 PD2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD2.GPIO_Label=TS6_sensor_connected
-PD2.GPIO_PuPd=GPIO_PULLUP
+PD2.GPIO_PuPd=GPIO_PULLDOWN
 PD2.Locked=true
 PD2.Signal=GPIO_Input
 PH0\ -\ OSC_IN.Locked=true
@@ -295,9 +296,10 @@ SH.ADCx_IN2.ConfNb=1
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM2.IPParameters=Prescaler,Period,AutoReloadPreload
+TIM2.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterOutputTrigger
 TIM2.Period=99
 TIM2.Prescaler=99
+TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 USART1.BaudRate=9600
 USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
