--- a/CubeMx project.ioc
+++ b/CubeMx project.ioc
@@ -188,12 +188,12 @@ PC7.PinState=GPIO_PIN_RESET
 PC7.Signal=GPIO_Output
 PD0.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD0.GPIO_Label=TS4_sensor_connected
-PD0.GPIO_PuPd=GPIO_PULLDOWN
+PD0.GPIO_PuPd=GPIO_PULLUP
 PD0.Locked=true
 PD0.Signal=GPIO_Input
 PD1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD1.GPIO_Label=TS5_sensor_connected
-PD1.GPIO_PuPd=GPIO_PULLDOWN
+PD1.GPIO_PuPd=GPIO_PULLUP
 PD1.Locked=true
 PD1.Signal=GPIO_Input
 PD12.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
@@ -215,7 +215,7 @@ PD14.Signal=GPIO_Output
 PD14.Stacked=true
 PD2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD2.GPIO_Label=TS6_sensor_connected
-PD2.GPIO_PuPd=GPIO_PULLDOWN
+PD2.GPIO_PuPd=GPIO_PULLUP
 PD2.Locked=true
 PD2.Signal=GPIO_Input
 PH0\ -\ OSC_IN.Locked=true
